# PeakState

./: .env.example  .gitignore  03技术实施文档.md  CHANGELOG.md  FINAL_XCODE_GUIDE.md  FINAL_XCODE_STEPS.md  FIX_XCODE_ERRORS.md  HEALTHKIT_SETUP_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IPHONE_TEST_GUIDE.md  PROJECT_PROGRESS_REPORT.md  PROJECT_STATUS_UPDATE.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY.md  SIMPLE_IPHONE_TEST.md  SUCCESS_GUIDE.md  URGENT_FIX.md  WEB_TEST_NOW.md  XCODE_FIX_GUIDE.md  docker-compose.yml  fix_capacitor.sh  fix_xcode.sh  rebuild_ios.sh  rebuild_ios_clean.sh  remove_cocoapods.py  start_backend.sh  start_web_test.sh  test_web.sh
backend/: AI_CHAT_IMPLEMENTATION_SUMMARY.md  AI_CHAT_SETUP.md  AI_MODELS_CONFIGURATION.md  AI_MODELS_UPDATE_2025.md  API_KEYS_SETUP.md  AUTHENTICATION_GUIDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LATEST_AI_MODELS_CONFIG.md  STARTUP_STATUS.md  add_user_profile_fields.sql  alembic.ini  migrate_user_profile.py  pyproject.toml  requirements.txt  test_ai_apis.py  test_app.py  test_complexity_analyzer.py  test_environment_integration.py  test_health_api.py  test_intent_classifier.py  test_local_model.py  test_mcp_tools.py  test_rds_connection.py  test_rds_sqlalchemy.py  test_response_cache.py  update_enum.py  verify_api_keys.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/ai/: __init__.py  complexity_analyzer.py  digital_twin.py  energy_prediction.py  intent_classifier.py  local_models.py  orchestrator.py  prompts.py  response_cache.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py  database.py  redis_client.py  security.py
backend/app/crud/: conversation.py  health_data.py  user.py
backend/app/mcp/: __init__.py  base.py  health_server.py  schemas.py
backend/app/models/: __init__.py  ai_metrics.py  conversation.py  energy.py  health_data.py  user.py
backend/app/schemas/: __init__.py  chat.py  health.py  token.py  user.py
backend/app/services/: __init__.py  health_analytics.py  weather.py
backend/app/tasks/: __init__.py  briefing.py  environment.py
backend/docs/: ENVIRONMENT_DATA_SETUP.md
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  08e4f1a33466_add_user_profile_fields.py  2d3e4c77711f_update_coach_type_enum_values.py  (+4 more)
backend/scripts/: generate_knowledge_base.py
(+100 files in other folders)
